testsuite/tests/arrows/gadt/ArrowDict.stderr

ArrowDict.hs:8:13: error: [GHC-64525]
    • Proc patterns cannot use existential or GADT data constructors
    • In the pattern: D x
      In the expression: proc (D x) -> do show -< x
      In an equation for ‘get’: get = proc (D x) -> do show -< x
